<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/score_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        android:id="@+id/textViewScoreTitle" />

    <TextView
        android:text="@string/score_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:id="@+id/textViewScorePlayer1" />

    <TextView
        android:text="@string/score_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:id="@+id/textViewScorePlayer2" />

    <TextView
        android:text="@string/score_computer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:id="@+id/textViewScoreComputer" />

    <TextView
        android:text="@string/score_ties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:id="@+id/textViewScoreTies" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_scores"
        android:id="@+id/buttonResetScore"
        android:onClick="resetScores" />
</LinearLayout>